tests/harness/errors/132_length_hint.eu
# Mistake: using 'length' (Python/Ruby style) — eucalypt uses 'count'
xs: [1, 2, 3]
result: xs length
